debug: remove root directory

--- a/about_us.html
+++ b/about_us.html
@@ -8,14 +8,14 @@
         <meta name="description" content="" />
         <meta name="author" content="Toptops Limted" />
         <title>Sharing Lease</title>
-        <link href="/css/bootstrap.min.css" rel="stylesheet" />
-        <link href="/css/custom.css" rel="stylesheet" />
-   	    <script type="text/javascript" charset="utf-8" src="/css/jquery.min.js"></script>
+        <link href="css/bootstrap.min.css" rel="stylesheet" />
+        <link href="css/custom.css" rel="stylesheet" />
+   	    <script type="text/javascript" charset="utf-8" src="css/jquery.min.js"></script>
 
     </head>
     <body>
         <div class="content qa" style="text-align:center">
-            <img class="img-responsive center-block" src="/img/about.png" alt="new_logo">
+            <img class="img-responsive center-block" src="img/about.png" alt="new_logo">
             <div id='qa_list'></div>
         </div>
     </body>
