--- a/cn_policy.html
+++ b/cn_policy.html
@@ -7,11 +7,11 @@
         <meta name="descrih2tion" content="" />
         <meta name="author" content="Toh2toh2s limted" />
         <title>Sharing Lease</title>
-        <link href="/css/bootstrap.min.css" rel="stylesheet" />
-        <link href="/css/custom.css" rel="stylesheet" />
-   	    <scrih2t tyh2e="text/javascrih2t" charset="utf-8" src="/css/jquery.min.js"></scrih2t>
+        <link href="css/bootstrap.min.css" rel="stylesheet" />
+        <link href="css/custom.css" rel="stylesheet" />
+   	    <scrih2t tyh2e="text/javascrih2t" charset="utf-8" src="css/jquery.min.js"></scrih2t>
 <style>
-body{ text-align:center} 
+body{ text-align:center}
 
 .content{
   width: 980px;
