--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
         <meta http-equiv="Content-Security-Policy" content="">
 
         <!-- Web Fonts -->
-        <link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css" />
+        <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
         <!-- Vendor Styles -->
-        <link href="/css/bootstrap.min.css"  rel="stylesheet" type="text/css" />
-        <link href="/css/animate.css" rel="stylesheet" type="text/css"/>
-        <link href="/css/themify.css" rel="stylesheet" type="text/css"/>
-        <link href="/css/swiper.min.css" rel="stylesheet" type="text/css"/>
-        <link href="/css/cubeportfolio.min.css" rel="stylesheet" type="text/css"/>
-        <script type="text/javascript" src="/js/jquery.min.js"></script>
-        <script type="text/javascript" src="/js/jquery.validate.min.js"></script>
+        <link href="css/bootstrap.min.css"  rel="stylesheet" type="text/css" />
+        <link href="css/animate.css" rel="stylesheet" type="text/css"/>
+        <link href="css/themify.css" rel="stylesheet" type="text/css"/>
+        <link href="css/swiper.min.css" rel="stylesheet" type="text/css"/>
+        <link href="css/cubeportfolio.min.css" rel="stylesheet" type="text/css"/>
+        <script type="text/javascript" src="js/jquery.min.js"></script>
+        <script type="text/javascript" src="js/jquery.validate.min.js"></script>
 
         <!-- Theme Styles -->
-        <link href="/css/style.css" rel="stylesheet" type="text/css"/>
-        <link href="/css/global.css" rel="stylesheet" type="text/css"/>
+        <link href="css/style.css" rel="stylesheet" type="text/css"/>
+        <link href="css/global.css" rel="stylesheet" type="text/css"/>
 
         <!-- Favicon -->
-        <link rel="shortcut icon" href="/img/headline.png" type="image/png">
+        <link rel="shortcut icon" href="img/headline.png" type="image/png">
         <link rel="apple-touch-icon" href="http://oulthdsdy.bkt.clouddn.com/top.png">
-        <link href="/css/index.css" rel="stylesheet" type="text/css"/>
+        <link href="css/index.css" rel="stylesheet" type="text/css"/>
     <head>
     <!-- End Head -->
 
@@ -52,7 +52,7 @@
                                 <div class="s-header__logo">
 
                                     <a href="/index.html" class="s-header__logo-link">
-                                        <img class="s-header__logo-img s-header__logo-img-default" width="" height="75" src="/img/CNLOGO3.png" alt="Logo">
+                                        <img class="s-header__logo-img s-header__logo-img-default" width="" height="75" src="img/CNLOGO3.png" alt="Logo">
                                     </a>
                                 </div>
                                 <!-- End Logo -->
@@ -87,12 +87,12 @@
                        <div class="row">
                            <div class="col-xs-12 col-sm-6 store-badge-div">
                                <a href="https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=1271243750" onclick="trackOutboundLink('https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=1271243750'); return false;">
-                                   <img src="/img/download_ios_image.png" class="store-badge" alt="Download on the Apple App Store">
+                                   <img src="img/download_ios_image.png" class="store-badge" alt="Download on the Apple App Store">
                                </a>
                            </div>
                            <div class="col-xs-12 col-sm-6 store-badge-div-2">
     			                      <a href="http://android.myapp.com/myapp/detail.htm?apkName=ibrandev.com.sharinglease" id = "J_weixin">
-    				                          <img src="/img/download_andriod_image.png" class="store-badge" alt="Get it on Google Play">
+    				                          <img src="img/download_andriod_image.png" class="store-badge" alt="Get it on Google Play">
                                 </a>
                            </div>
                        </div>
@@ -116,7 +116,7 @@
                 </div>
                 <div class="col-sm-1"></div>
                 <div class="col-sm-5 g-hor-centered-row__col">
-                    <img class="img-responsive" src="/img/pic1.png" alt="Image">
+                    <img class="img-responsive" src="img/pic1.png" alt="Image">
                 </div>
                 <div class="col-sm-1"></div>
             </div>
@@ -129,7 +129,7 @@
                 </div>
                 <div class="col-sm-1"></div>
                 <div class="col-sm-5 col-sm-pull-6 g-hor-centered-row__col g-text-left--xs g-text-right--md">
-                    <img class="img-responsive" src="/img/pic2.png" alt="Image">
+                    <img class="img-responsive" src="img/pic2.png" alt="Image">
                 </div>
                 <div class="col-sm-1"></div>
             </div>
@@ -141,7 +141,7 @@
                 </div>
                 <div class="col-sm-1"></div>
                 <div class="col-sm-5 g-hor-centered-row__col">
-                    <img class="img-responsive" src="/img/pic3.png" alt="Image">
+                    <img class="img-responsive" src="img/pic3.png" alt="Image">
                 </div>
                 <div class="col-sm-1"></div>
             </div>
@@ -154,7 +154,7 @@
                 </div>
                 <div class="col-sm-1"></div>
                 <div class="col-sm-5 col-sm-pull-6 g-hor-centered-row__col g-text-left--xs g-text-right--md">
-                    <img class="img-responsive" src="/img/pic4.png" alt="Image">
+                    <img class="img-responsive" src="img/pic4.png" alt="Image">
                 </div>
                 <div class="col-sm-1"></div>
             </div>
@@ -166,7 +166,7 @@
                 </div>
                 <div class="col-sm-1"></div>
                 <div class="col-sm-5 g-hor-centered-row__col">
-                    <img class="img-responsive" src="/img/pic5.png" alt="Image">
+                    <img class="img-responsive" src="img/pic5.png" alt="Image">
                 </div>
                 <div class="col-sm-1"></div>
             </div>
@@ -179,7 +179,7 @@
                 </div>
                 <div class="col-sm-1"></div>
                 <div class="col-sm-5 col-sm-pull-6 g-hor-centered-row__col g-text-left--xs g-text-right--md">
-                    <img class="img-responsive" src="/img/pic6.png" alt="Image">
+                    <img class="img-responsive" src="img/pic6.png" alt="Image">
                 </div>
                 <div class="col-sm-1"></div>
             </div>
@@ -208,15 +208,15 @@
                             </p>
                             <div id="social-icons" class="">
 				                            <a target="_blank" class="trackData" data-name="homefacebookLink" href="https://www.facebook.com/SharingLease">
-                                      <img src="/img/facebookicon.jpeg" alt="Facebook"></a>
+                                      <img src="img/facebookicon.jpeg" alt="Facebook"></a>
                                     <a target="_blank" class="trackData" data-name="homefacebookLink" href="https://plus.google.com/u/3/118026204396723379254">
-                                      <img src="/img/google+icon.png" alt=""></a>
+                                      <img src="img/google+icon.png" alt=""></a>
                                     <a target="_blank" class="trackData" data-name="homefacebookLink" href="https://www.instagram.com/sharinglease/">
-                                      <img src="/img/insicon.png" alt=""></a>
+                                      <img src="img/insicon.png" alt=""></a>
                                     <a target="_blank" class="trackData" data-name="homefacebookLink" href="https://www.youtube.com/channel/UCAZKrJc6rds0AUq0JoMlXfQ">
-                                      <img src="/img/youtubeicon.png" alt=""></a>
+                                      <img src="img/youtubeicon.png" alt=""></a>
                                     <a target="_blank" class="trackData" data-name="homefacebookLink" href="http://www.ibrandev.com">
-                                      <img src="/img/haibolangicon.jpeg" alt=""></a>
+                                      <img src="img/haibolangicon.jpeg" alt=""></a>
                             </div>
                         </div>
                     </div>
@@ -246,26 +246,26 @@
         <!--========== JAVASCRIPTS (Load javascripts at bottom, this will reduce page load time) ==========-->
         <!-- Vendor -->
 
-        <script type="text/javascript" src="/js/jquery.migrate.min.js"></script>
-        <script type="text/javascript" src="/js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="/js/jquery.smooth-scroll.min.js"></script>
-        <script type="text/javascript" src="/js/jquery.back-to-top.min.js"></script>
-        <script type="text/javascript" src="/js/vidbg.min.js"></script>
-        <script type="text/javascript" src="/js/jquery.cubeportfolio.min.js"></script>
-        <script type="text/javascript" src="/js/waypoint.min.js"></script>
-        <script type="text/javascript" src="/js/counterup.min.js"></script>
-        <script type="text/javascript" src="/js/swiper.jquery.min.js"></script>
-        <script type="text/javascript" src="/js/jquery.wow.min.js"></script>
+        <script type="text/javascript" src="js/jquery.migrate.min.js"></script>
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="js/jquery.smooth-scroll.min.js"></script>
+        <script type="text/javascript" src="js/jquery.back-to-top.min.js"></script>
+        <script type="text/javascript" src="js/vidbg.min.js"></script>
+        <script type="text/javascript" src="js/jquery.cubeportfolio.min.js"></script>
+        <script type="text/javascript" src="js/waypoint.min.js"></script>
+        <script type="text/javascript" src="js/counterup.min.js"></script>
+        <script type="text/javascript" src="js/swiper.jquery.min.js"></script>
+        <script type="text/javascript" src="js/jquery.wow.min.js"></script>
 
         <!-- General Components and Settings -->
-        <script type="text/javascript" src="/js/global.min.js"></script>
-        <script type="text/javascript" src="/js/header-sticky.js"></script>
-        <script type="text/javascript" src="/js/portfolio-4-col-slider.min.js"></script>
-        <script type="text/javascript" src="/js/counter.min.js"></script>
-        <script type="text/javascript" src="/js/swiper.min.js"></script>
-        <script type="text/javascript" src="/js/wow.min.js"></script>
-        <script type="text/javascript" src="/js/tracking.js"></script>
+        <script type="text/javascript" src="js/global.min.js"></script>
+        <script type="text/javascript" src="js/header-sticky.js"></script>
+        <script type="text/javascript" src="js/portfolio-4-col-slider.min.js"></script>
+        <script type="text/javascript" src="js/counter.min.js"></script>
+        <script type="text/javascript" src="js/swiper.min.js"></script>
+        <script type="text/javascript" src="js/wow.min.js"></script>
+        <script type="text/javascript" src="js/tracking.js"></script>
 
-        <script type="text/javascript" src="/js/index.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
         <!--========== END JAVASCRIPTS ==========-->
 </html>
